[package]
name = "openwv"
version = "1.0.1"
license = "LGPL-3.0-only"

description = "Open reimplementation of Google's Widevine Content Decryption Module for browsers"
authors = ["Thomas Hebb <tommyhebb@gmail.com>"]

edition = "2024"

[dependencies]
autocxx = { git = "https://github.com/tchebb/autocxx.git", branch = "openwv-fixes" }
cxx = "1"
prost = "0.13"
thiserror = "2"
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }
byteorder = "1"
rand = { version = "0.9", default-features = false, features = ["std", "os_rng"] }
uuid = "1"

### RustCrypto crates
rsa = "0.10.0-rc"
sha1 = "0.11.0-rc"
sha2 = "0.11.0-rc"
cmac = "0.8.0-rc"
hmac = "0.13.0-rc"
aes = "0.9.0-rc"
cbc = { version = "0.2.0-rc", features = ["alloc"] }
ctr = "0.10.0-rc"

[build-dependencies]
autocxx-build = { git = "https://github.com/tchebb/autocxx.git", branch = "openwv-fixes" }
prost-build = "0.13"
thiserror = "2"

[lib]
name = "widevinecdm"
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "fat"
